:recycle: 使用 JDK 21 collection.getFirst()